--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Responsive Portfolio Website</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"></script>
     <!-- Link To CSS -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Box Icons -->
     <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -213,6 +213,6 @@
  
  
     <!-- Link To JS -->
-    <script src="./js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
