--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="home-text">
             <span>Hello, I'm</span>
             <h1>kunal</h1>
-            <h2>Frontend Developer</h2>
+            <h2>Frontend </h2>
             <p>Lorem ipsum dolor sit amet cons <br> adipisicing elit. Minima, consectetur <br> ullam?</p>
             <a href="#contact" class="btn">Contact Me</a>
         </div>
